--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
 <body>
   <div class="container-column">
     <div id="recent-games">
-      <h2>Recent Games</h2>
+      <b>Recent Games</b>
     </div>
-    <div id="top-headlines">Top Headlines</div>
-    <div id="players"></div>
+    <div id="top-headlines"><b>Top headlines</b> 
+      <div id="top-headlines-display"></div>
+    </div>
+    <div  id="players">
+      <b>Players</b>
+    </div>
   </div>
-
-
-
-
-  <pre </pre>
   
   <script src="teams.js" ></script>
   <script src="scripts/headlines.js" ></script>
