--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
   
   <script src="teams.js" ></script>
   <script src="scripts/headlines.js" ></script>
+  <script src="scripts/players.js" ></script>
+
 </body>
   
   
