--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
     </div>
     <div  id="players">
       <b>Players</b>
+      <div id="Players-display"></div>
     </div>
   </div>
   
   <script src="teams.js" ></script>
-  <script src="scripts/headlines.js" ></script>
   <script src="scripts/players.js" ></script>
-
+ <script src="scripts/headlines.js" ></script>
+ 
 </body>
   
   
